--- a/options.html
+++ b/options.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Auto-login options</title>
+        <meta charset="UTF-8">
         <style>
-        body { background-color: #66A3D2; }
         table { margin: 20px auto; }
         input { width: 10px; }
 
@@ -16,7 +16,8 @@
         <div id="centeringDiv">
             <table id="matrixTable">
             </table>
-            <button>Save!</button>
+            <button id="saveButton">Save and hide!</button>
+            <button id="editButton">Edit</button>
         </div>
     </body>
 
