--- a/popup.html
+++ b/popup.html
@@ -2,33 +2,35 @@
 <html>
     <head>
         <title>Titech Portal Auto-login</title>
+        <meta charset="UTF-8">
         <style>
         body {
             font-family: Segoe UI, Tahoma, sans-serif;
             font-size: 1em;
+            width: 150px;
+            text-align: center;
         }
 
-        textarea {
-            width: 200px;
-            height: 150px;
-            resize: none;
+        button {
+            font-size: 1.2em;
+            padding: 10px;
         }
 
-        #matrixErrorSpan {
-            color: red;
-            visibility: hidden;
+        #alertDiv {
+            font-style: italic;
+            color: gray;
+            border-top: 1px dotted lightGray;
+            margin-top: 6px;
+            display: block;
         }
         </style>
-        <script src="popup.js"></script>
     </head>
     <body>
-        <fieldset>
-            <legend>Login Matrix</legend>
-            <textarea id="matrixTextArea"></textarea>
-            <button id="saveButton" disabled="true">Save</button>
-            <button id="autoFillButton" disabled="true">Auto-fill</button>
-            <span id="matrixErrorSpan">Error!</span>
-        </fieldset>
+        <button id="loginButton" disabled="true">Log me in!</button>
+        <div id="alertDiv">Please set up your login matrix in the options.</div>
     </body>
+
+    <script src="popup.js"></script>
+
 </html>
 
