--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
             color: gray;
             border-top: 1px dotted lightGray;
             margin-top: 6px;
-            display: block;
+            display: none;
         }
         </style>
     </head>
