--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Auto-login options</title>
+        <title>Titech Portal Auto-login options</title>
         <meta charset="UTF-8">
         <style>
         body, input {
@@ -11,6 +11,7 @@
         table { margin: 20px auto; }
         td:first-child { padding-right: 8px; }
         input[type="text"] { width: 1.1em; }
+        h1 { border-bottom: 1px solid gray; }
 
         #centeringDiv {
             text-align: center;
@@ -19,12 +20,13 @@
     </head>
     <body>
         <div id="centeringDiv">
+            <h1>Titech Portal Auto-login</h1>
             <table id="matrixTable">
             </table>
             <input type="button" id="saveButton" value="Save">
             <input type="button" id="editButton" value="Edit">
         </div>
-        </body>
+    </body>
 
     <script src="options.js"></script>
 
